# beaut11

./: CMakeLists.txt  README.md
cmake/: FindImGUI.cmake
src/: camera.cpp  camera.h  gui.h  main.cpp  mesh.cpp  mesh.h  mesh_loader.h  player.h  renderer.cpp  renderer.h  settings.h  shader.cpp  shader.h  shader_globals.cpp  shader_globals.h  texture.cpp  texture.h  tiny_obj_loader.h  vertex.h  window.cpp  window.h
src/assets/: the_shader.hlsl
